# muddy-reporter

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  REFLECTION.md  pyproject.toml  render.yaml  requirements.txt  run.py  web.py
frontend/: index.html
src/muddy_reporter/: __init__.py  cli.py  financials.py  fraud_classifier.py  llm.py  ml_scorer.py  models.py  pipeline.py  prompts.py  render.py  sec_edgar.py  text_extract.py
src/muddy_reporter/templates/: report.html.j2
